tests/functional/lang/eval-fail-div-2.err.exp
error:
       … while calling the 'div' builtin
         at /pwd/lang/eval-fail-div-2.nix:1:1:
            1| builtins.div 1 "foo"
             | ^
            2|

       … while evaluating the second operand of the division

       error: expected a float but found a string: "foo"
